--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "startupjs_Stellar1",
-  "displayName": "startupjs_Stellar1"
+  "name": "stellar_sj",
+  "displayName": "stellar_sj"
 }
