--- a/config.json
+++ b/config.json
@@ -5,8 +5,5 @@
   "BASE_URL": "http://localhost:3000",
   "REDIS_URL": "redis://localhost:6379/1",
   "MONGO_URL": "mongodb://localhost:27017/helloworld",
-  "COPY_TO_ENV": ["MONGO_URL"],
-  "compilerOptions": {
-    "baseUrl": "src"
-  }
+  "COPY_TO_ENV": ["MONGO_URL"]
 }
